renamed README files to README.txt
 SVN 9657@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,8 +1,10 @@
 * text=auto !eol
 /COPYING.modifiedLGPL -text svneol=unset#application/octet-stream
+/README.txt svneol=native#text/plain
 components/README.txt svneol=native#text/plain
 components/cgi/Makefile svneol=native#text/plain
 components/cgi/Makefile.fpc svneol=native#text/plain
+components/cgi/README.txt svneol=native#text/plain
 components/cgi/cgilaz.lpk svneol=native#text/pascal
 components/cgi/cgilaz.pas svneol=native#text/plain
 components/cgi/cgimodules.pas svneol=native#text/pascal
@@ -90,6 +92,7 @@ components/codetools/finddeclarationcache.pas svneol=native#text/pascal
 components/codetools/finddeclarationtool.pas svneol=native#text/pascal
 components/codetools/identcompletiontool.pas svneol=native#text/pascal
 components/codetools/keywordfunclists.pas svneol=native#text/pascal
+components/codetools/languages/README.txt svneol=native#text/plain
 components/codetools/languages/codetools.ca.po svneol=native#text/plain
 components/codetools/languages/codetools.de.po svneol=native#text/plain
 components/codetools/languages/codetools.es.po svneol=native#text/plain
@@ -123,6 +126,7 @@ components/codetools/resourcecodetool.pas svneol=native#text/pascal
 components/codetools/sourcechanger.pas svneol=native#text/pascal
 components/codetools/sourcelog.pas svneol=native#text/pascal
 components/codetools/stdcodetools.pas svneol=native#text/pascal
+components/custom/README.txt svneol=native#text/plain
 components/customform/custforms.pp svneol=native#text/plain
 components/customform/demo/appform.pas svneol=native#text/plain
 components/customform/demo/appforms.lpk svneol=native#text/plain
@@ -176,8 +180,10 @@ components/images/lazpnm.pas svneol=native#text/pascal
 components/images/laztga.pas svneol=native#text/pascal
 components/images/lazxpm.pas svneol=native#text/pascal
 components/images/readme.txt svneol=native#text/plain
+components/interbase/README.txt svneol=native#text/plain
 components/interbase/interbaselaz.lpk svneol=native#text/pascal
 components/interbase/interbaselaz.pas svneol=native#text/pascal
+components/interbase/lib/README.txt svneol=native#text/plain
 components/interbase/registerinterbase.lrs svneol=native#text/pascal
 components/interbase/registerinterbase.pas svneol=native#text/pascal
 components/interbase/tibdatabase.ico -text svneol=unset#image/x-icon
@@ -211,6 +217,7 @@ components/memds/Makefile.fpc svneol=native#text/plain
 components/memds/frmselectdataset.lfm svneol=native#text/plain
 components/memds/frmselectdataset.lrs svneol=native#text/pascal
 components/memds/frmselectdataset.pp svneol=native#text/pascal
+components/memds/lib/README.txt svneol=native#text/plain
 components/memds/memdsicons.lrs svneol=native#text/pascal
 components/memds/memdslaz.lpk svneol=native#text/pascal
 components/memds/memdslaz.pas svneol=native#text/pascal
@@ -261,6 +268,7 @@ components/prettyformat/prettyformat.pas svneol=native#text/plain
 components/prettyformat/ptopu.pp svneol=native#text/plain
 components/printers/Makefile svneol=native#text/plain
 components/printers/Makefile.fpc svneol=native#text/plain
+components/printers/lib/README.txt svneol=native#text/plain
 components/printers/osprinters.pas svneol=native#text/pascal
 components/printers/printer4lazarus.lpk svneol=native#text/pascal
 components/printers/printer4lazarus.pas svneol=native#text/pascal
@@ -296,7 +304,7 @@ components/printers/win32/winutilprn.pas svneol=native#text/pascal
 components/printers/win32/winutilprnconst.inc svneol=native#text/pascal
 components/projecttemplates/Makefile svneol=native#text/plain
 components/projecttemplates/Makefile.fpc svneol=native#text/plain
-components/projecttemplates/README svneol=native#text/plain
+components/projecttemplates/README.txt svneol=native#text/plain
 components/projecttemplates/frmtemplatesettings.lfm svneol=native#text/plain
 components/projecttemplates/frmtemplatesettings.lrs svneol=native#text/plain
 components/projecttemplates/frmtemplatesettings.pas svneol=native#text/plain
@@ -309,6 +317,7 @@ components/projecttemplates/projtemplates.lpk svneol=native#text/plain
 components/projecttemplates/projtemplates.pas svneol=native#text/plain
 components/rtticontrols/Makefile svneol=native#text/plain
 components/rtticontrols/Makefile.fpc svneol=native#text/plain
+components/rtticontrols/README.txt svneol=native#text/plain
 components/rtticontrols/baseicon.png -text svneol=unset#image/png
 components/rtticontrols/examples/example1.lfm svneol=native#text/plain
 components/rtticontrols/examples/example1.lrs svneol=native#text/pascal
@@ -330,6 +339,7 @@ components/rtticontrols/examples/exampleproject3.lpi svneol=native#text/plain
 components/rtticontrols/examples/exampleproject3.lpr svneol=native#text/pascal
 components/rtticontrols/examples/exampleprojectgrid1.lpi svneol=native#text/plain
 components/rtticontrols/examples/exampleprojectgrid1.lpr svneol=native#text/pascal
+components/rtticontrols/lib/README.txt svneol=native#text/plain
 components/rtticontrols/rttictrls.lrs svneol=native#text/pascal
 components/rtticontrols/rttictrls.pas svneol=native#text/pascal
 components/rtticontrols/rttigrids.pas svneol=native#text/pascal
@@ -378,6 +388,7 @@ components/sdf/tfixedformatdataset.xpm -text svneol=native#image/x-xpixmap
 components/sdf/tsdfdataset.xpm -text svneol=native#image/x-xpixmap
 components/sqldb/Makefile svneol=native#text/plain
 components/sqldb/Makefile.fpc svneol=native#text/plain
+components/sqldb/lib/README.txt svneol=native#text/plain
 components/sqldb/registersqldb.lrs svneol=native#text/pascal
 components/sqldb/registersqldb.pas svneol=native#text/pascal
 components/sqldb/sqldblaz.lpk svneol=native#text/pascal
@@ -387,6 +398,7 @@ components/sqldb/tmysqlconnection.xpm -text svneol=native#image/x-xpixmap
 components/sqldb/tpqconnection.xpm -text svneol=native#image/x-xpixmap
 components/sqldb/tsqlquery.xpm -text svneol=native#image/x-xpixmap
 components/sqldb/tsqltransaction.xpm -text svneol=native#image/x-xpixmap
+components/sqlite/lib/README.txt svneol=native#text/plain
 components/sqlite/registersqlite.pas svneol=native#text/plain
 components/sqlite/registersqlite3.pas svneol=native#text/plain
 components/sqlite/sqlite3icon.lrs svneol=native#text/plain
@@ -402,6 +414,7 @@ components/sqlite/sqlitelaz.pas svneol=native#text/plain
 components/sqlite/tsqlite3dataset.xpm svneol=native#text/plain
 components/sqlite/tsqlitedataset.xpm -text svneol=native#image/x-xpixmap
 components/synedit/allsyneditunits.pp svneol=native#text/pascal
+components/synedit/design/README.txt svneol=native#text/plain
 components/synedit/design/tsynanysyn.xpm svneol=native#text/plain
 components/synedit/design/tsynautocomplete.xpm -text svneol=native#image/x-xpixmap
 components/synedit/design/tsyncppsyn.xpm -text svneol=native#image/x-xpixmap
@@ -422,6 +435,7 @@ components/synedit/design/tsynsqlsyn.xpm -text svneol=native#image/x-xpixmap
 components/synedit/design/tsyntexsyn.xpm -text svneol=native#image/x-xpixmap
 components/synedit/design/tsynunixshellscriptsyn.xpm -text svneol=native#image/x-xpixmap
 components/synedit/design/tsynxmlsyn.xpm -text svneol=native#image/x-xpixmap
+components/synedit/languages/README.txt svneol=native#text/plain
 components/synedit/languages/synedit.ca.po svneol=native#text/plain
 components/synedit/languages/synedit.de.po svneol=native#text/plain
 components/synedit/languages/synedit.fi.po svneol=native#text/plain
@@ -487,6 +501,8 @@ components/synedit/synmacrorecorder.pas svneol=native#text/pascal
 components/synedit/synmemo.pas svneol=native#text/pascal
 components/synedit/synregexpr.pas svneol=native#text/pascal
 components/synedit/syntextdrawer.pp svneol=native#text/pascal
+components/synunihighlighter/README.txt svneol=native#text/plain
+components/synunihighlighter/lib/README.txt svneol=native#text/plain
 components/synunihighlighter/synuni.lpk svneol=native#text/pascal
 components/synunihighlighter/synuni.pas svneol=native#text/pascal
 components/synunihighlighter/synunidesigner.pas svneol=native#text/pascal
@@ -605,7 +621,7 @@ debugger/watchesdlg.pp svneol=native#text/pascal
 debugger/watchpropertydlg.lfm svneol=native#text/plain
 debugger/watchpropertydlg.lrs svneol=native#text/pascal
 debugger/watchpropertydlg.pp svneol=native#text/pascal
-debugger/windebug/fpwd/README svneol=native#text/plain
+debugger/windebug/fpwd/README.txt svneol=native#text/plain
 debugger/windebug/fpwd/fpwd.lpr svneol=native#text/pascal
 debugger/windebug/fpwd/fpwdcommand.pas svneol=native#text/pascal
 debugger/windebug/fpwd/fpwdglobal.pas svneol=native#text/pascal
@@ -720,6 +736,7 @@ docs/LazarusIDEInternals.pdf -text svneol=unset#application/pdf
 docs/Packages.txt svneol=native#text/plain
 docs/RemoteDebugging.txt svneol=native#text/plain
 docs/TODO svneol=native#text/plain
+docs/html/README.txt svneol=native#text/plain
 docs/html/fpdoc.css svneol=native#text/css
 docs/html/locallclfooter.xml svneol=native#text/plain
 docs/html/localrtlfooter.xml svneol=native#text/plain
@@ -1088,6 +1105,7 @@ examples/toolbar.lpi svneol=native#text/plain
 examples/toolbar.pp svneol=native#text/pascal
 examples/trackbar.lpi svneol=native#text/plain
 examples/trackbar.pp svneol=native#text/pascal
+examples/treeview/README.txt svneol=native#text/plain
 examples/treeview/TV_Add_Remove.dpr svneol=native#text/pascal
 examples/treeview/TV_Add_Remove.res svneol=native#unset
 examples/treeview/TV_Add_Remove_U1.dfm svneol=native#unset
@@ -1346,6 +1364,7 @@ ide/viewunit_dlg.lfm svneol=native#text/plain
 ide/viewunit_dlg.lrs svneol=native#text/pascal
 ide/viewunit_dlg.pp svneol=native#text/pascal
 ide/wordcompletion.pp svneol=native#text/pascal
+ideintf/README.txt svneol=native#text/plain
 ideintf/actionseditor.lfm svneol=native#text/plain
 ideintf/actionseditor.lrs svneol=native#text/pascal
 ideintf/actionseditor.pas svneol=native#text/pascal
@@ -1499,6 +1518,7 @@ images/LazarusForm.ico -text svneol=unset#image/x-icon
 images/LazarusProject.ico -text svneol=unset#image/x-icon
 images/LazarusSource.bmp -text svneol=unset#image/bmp
 images/LazarusSource.ico -text svneol=unset#image/x-icon
+images/README.txt svneol=native#text/plain
 images/bookmark.lrs svneol=native#text/pascal
 images/btn_downarrow.ico -text svneol=unset#image/x-icon
 images/btn_downarrow.xpm -text svneol=native#image/x-xpixmap
@@ -1859,6 +1879,7 @@ images/uparrow.ico -text svneol=unset#image/x-icon
 images/uparrow.xpm -text svneol=native#image/x-xpixmap
 images/vase_trans.xpm -text svneol=native#image/x-xpixmap
 install/lazarus.desktop svneol=native#text/plain
+languages/README.txt svneol=native#text/plain
 languages/installerstrconsts.nl.po svneol=native#text/plain
 languages/installerstrconsts.po svneol=native#text/plain
 languages/lazaruside.ar.po svneol=native#text/plain
@@ -1951,6 +1972,7 @@ lcl/graphmath.pp svneol=native#text/pascal
 lcl/graphtype.pp svneol=native#text/pascal
 lcl/grids.pas svneol=native#text/pascal
 lcl/helpintfs.pas svneol=native#text/plain
+lcl/images/README.txt svneol=native#text/plain
 lcl/images/btncalccancel.xpm -text svneol=native#image/x-xpixmap
 lcl/images/btncalcimg.xpm -text svneol=native#image/x-xpixmap
 lcl/images/btncalcmin.xpm -text svneol=native#image/x-xpixmap
@@ -2116,6 +2138,7 @@ lcl/include/wincontrol.inc svneol=native#text/pascal
 lcl/inipropstorage.pas svneol=native#text/pascal
 lcl/interfacebase.pp svneol=native#text/pascal
 lcl/interfaces/LAYOUT.txt svneol=native#text/plain
+lcl/interfaces/carbon/README.txt svneol=native#text/plain
 lcl/interfaces/carbon/carbondef.pp svneol=native#text/pascal
 lcl/interfaces/carbon/carbonextra.pas svneol=native#text/pascal
 lcl/interfaces/carbon/carbonimages.lrs svneol=native#text/pascal
@@ -2250,6 +2273,7 @@ lcl/interfaces/gtk/tests/lclclipboardunit.lfm svneol=native#text/plain
 lcl/interfaces/gtk/tests/lclclipboardunit.lrs svneol=native#text/plain
 lcl/interfaces/gtk/tests/lclclipboardunit.pas svneol=native#text/plain
 lcl/interfaces/gtk/tnotebook_close_tab.xpm -text svneol=native#image/x-xpixmap
+lcl/interfaces/gtk2/README.txt svneol=native#text/plain
 lcl/interfaces/gtk2/gtk2cellrenderer.pas svneol=native#text/plain
 lcl/interfaces/gtk2/gtk2int.pas svneol=native#text/pascal
 lcl/interfaces/gtk2/gtk2interface.lpk svneol=native#text/pascal
@@ -2326,6 +2350,7 @@ lcl/interfaces/qt/qtwspairsplitter.pp svneol=native#text/pascal
 lcl/interfaces/qt/qtwsspin.pp svneol=native#text/pascal
 lcl/interfaces/qt/qtwsstdctrls.pp svneol=native#text/pascal
 lcl/interfaces/qt/qtwstoolwin.pp svneol=native#text/pascal
+lcl/interfaces/win32/README.txt svneol=native#text/plain
 lcl/interfaces/win32/interfaces.pp svneol=native#text/pascal
 lcl/interfaces/win32/win32callback.inc svneol=native#text/pascal
 lcl/interfaces/win32/win32def.pp svneol=native#text/pascal
@@ -2392,6 +2417,7 @@ lcl/interfaces/wince/wincewsforms.pp svneol=native#text/plain
 lcl/interfaces/wince/wincewsspin.pp svneol=native#text/plain
 lcl/interfaces/wince/wincewsstdctrls.pp svneol=native#text/plain
 lcl/intfgraphics.pas svneol=native#text/pascal
+lcl/languages/README.txt svneol=native#text/plain
 lcl/languages/lcl.ca.po svneol=native#text/plain
 lcl/languages/lcl.de.po svneol=native#text/plain
 lcl/languages/lcl.es.po svneol=native#text/plain
@@ -2431,6 +2457,7 @@ lcl/lresources.pp svneol=native#text/pascal
 lcl/maps.pp svneol=native#text/pascal
 lcl/maskedit.pp svneol=native#text/pascal
 lcl/menus.pp svneol=native#text/pascal
+lcl/nonwin32/README.txt svneol=native#text/plain
 lcl/nonwin32/messages.pp svneol=native#text/pascal
 lcl/pairsplitter.pas svneol=native#text/pascal
 lcl/postscriptcanvas.pas svneol=native#text/pascal
@@ -2474,6 +2501,7 @@ lcl/textstrings.pas svneol=native#text/pascal
 lcl/toolwin.pp svneol=native#text/pascal
 lcl/translations.pas svneol=native#text/pascal
 lcl/utrace.pp svneol=native#text/pascal
+lcl/widgetset/README.txt svneol=native#text/plain
 lcl/widgetset/wsactnlist.pp svneol=native#text/pascal
 lcl/widgetset/wsarrow.pp svneol=native#text/pascal
 lcl/widgetset/wsbuttons.pp svneol=native#text/pascal
@@ -2510,6 +2538,7 @@ packager/addfiletoapackagedlg.pas svneol=native#text/pascal
 packager/addtopackagedlg.pas svneol=native#text/pascal
 packager/basepkgmanager.pas svneol=native#text/pascal
 packager/brokendependenciesdlg.pas svneol=native#text/pascal
+packager/globallinks/README.txt svneol=native#text/plain
 packager/globallinks/lazcustomform-0.lpl svneol=native#text/plain
 packager/globallinks/lazopenglcontext-0.lpl svneol=native#text/plain
 packager/globallinks/macosfiles-0.lpl svneol=native#text/plain
@@ -2537,6 +2566,7 @@ packager/registerfcl.pas svneol=native#text/pascal
 packager/registerideintf.pas svneol=native#text/pascal
 packager/registerlcl.pas svneol=native#text/pascal
 packager/registersynedit.pas svneol=native#text/pascal
+packager/registration/README.txt svneol=native#text/plain
 packager/registration/lazaruspackageintf.pas svneol=native#text/pascal
 packager/ucomponentmanmain.lfm svneol=native#text/plain
 packager/ucomponentmanmain.lrs svneol=native#text/pascal
@@ -2555,6 +2585,7 @@ tools/delete_non_cvs_files.pl -text svneol=native#application/x-perl
 tools/find_non_cvs_files.pl -text svneol=native#application/x-perl
 tools/getallmofiles.sh -text svneol=native#application/x-sh
 tools/getallpofiles.sh -text svneol=native#application/x-sh
+tools/install/README.txt svneol=native#text/plain
 tools/install/build_fpc-src_rpm.sh svneol=native#text/plain
 tools/install/build_fpc_rpm.sh svneol=native#text/plain
 tools/install/build_fpc_snaphot_rpm.sh svneol=native#text/plain
