--- a/.gitattributes
+++ b/.gitattributes
@@ -1122,6 +1122,11 @@ examples/turbopower_ipro/mainunit.pas svneol=native#text/pascal
 examples/turbopower_ipro/simplepage2.html svneol=native#text/html
 examples/turbopower_ipro/tpiproexample.lpi svneol=native#text/plain
 examples/turbopower_ipro/tpiproexample.lpr svneol=native#text/pascal
+examples/widestringstreaming/mainunit.lfm svneol=native#text/plain
+examples/widestringstreaming/mainunit.lrs svneol=native#text/plain
+examples/widestringstreaming/mainunit.pas svneol=native#text/plain
+examples/widestringstreaming/widestringstreaming.lpi svneol=native#text/plain
+examples/widestringstreaming/widestringstreaming.lpr svneol=native#text/plain
 examples/xmlstreaming/mainunit.lfm svneol=native#text/plain
 examples/xmlstreaming/mainunit.lrs svneol=native#text/plain
 examples/xmlstreaming/mainunit.pas svneol=native#text/plain
