IDEIntf: added IDESearchInText, added text converter tools
 SVN 9683@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -163,7 +163,9 @@ components/h2pas/h2pasdlg.pas svneol=native#text/plain
 components/h2pas/h2passtrconsts.pas svneol=native#text/plain
 components/h2pas/h2paswizard.lpk svneol=native#text/plain
 components/h2pas/h2paswizard.pas svneol=native#text/plain
-components/h2pas/textconverter.pas svneol=native#text/plain
+components/h2pas/idetextconvlistedit.lfm svneol=native#text/plain
+components/h2pas/idetextconvlistedit.lrs svneol=native#text/plain
+components/h2pas/idetextconvlistedit.pas svneol=native#text/plain
 components/images/examples/README.txt svneol=native#text/plain
 components/images/examples/imagesexample.lpi svneol=native#text/plain
 components/images/examples/imagesexample.lpr svneol=native#text/pascal
@@ -1412,6 +1414,7 @@ ideintf/idedialogs.pas svneol=native#text/plain
 ideintf/ideexterntoolintf.pas svneol=native#text/plain
 ideintf/idehelpintf.pas svneol=native#text/plain
 ideintf/idemsgintf.pas svneol=native#text/plain
+ideintf/idetextconverter.pas svneol=native#text/plain
 ideintf/idewindowintf.pas svneol=native#text/plain
 ideintf/imagelisteditor.lfm svneol=native#text/plain
 ideintf/imagelisteditor.lrs svneol=native#text/plain
