--- a/.gitattributes
+++ b/.gitattributes
@@ -710,7 +710,11 @@ doceditor/frmtable.lfm svneol=native#text/plain
 doceditor/frmtable.lrs svneol=native#text/pascal
 doceditor/frmtable.pp svneol=native#text/pascal
 doceditor/icons.lrs svneol=native#text/pascal
+doceditor/images/Delete_16N.bmp -text
+doceditor/images/Edit_16N.bmp -text
+doceditor/images/Insert_16N.bmp -text
 doceditor/images/add.xpm -text svneol=native#image/x-xpixmap
+doceditor/images/build_icons.sh -text svneol=native#application/x-sh
 doceditor/images/delete.xpm -text svneol=native#image/x-xpixmap
 doceditor/images/edit.xpm -text svneol=native#image/x-xpixmap
 doceditor/images/node_edit.xpm -text svneol=native#image/x-xpixmap
