h2pas: started text tools editor
 SVN 9696@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -163,6 +163,9 @@ components/h2pas/h2pasdlg.pas svneol=native#text/plain
 components/h2pas/h2passtrconsts.pas svneol=native#text/plain
 components/h2pas/h2paswizard.lpk svneol=native#text/plain
 components/h2pas/h2paswizard.pas svneol=native#text/plain
+components/h2pas/idetextconvlistadd.lfm svneol=native#text/plain
+components/h2pas/idetextconvlistadd.lrs svneol=native#text/plain
+components/h2pas/idetextconvlistadd.pas svneol=native#text/plain
 components/h2pas/idetextconvlistedit.lfm svneol=native#text/plain
 components/h2pas/idetextconvlistedit.lrs svneol=native#text/plain
 components/h2pas/idetextconvlistedit.pas svneol=native#text/plain
