--- a/.gitattributes
+++ b/.gitattributes
@@ -626,6 +626,7 @@ debugger/watchesdlg.pp svneol=native#text/pascal
 debugger/watchpropertydlg.lfm svneol=native#text/plain
 debugger/watchpropertydlg.lrs svneol=native#text/pascal
 debugger/watchpropertydlg.pp svneol=native#text/pascal
+debugger/windebug/fpdd/fpdumpdwarf.lpr svneol=native#text/pascal
 debugger/windebug/fpwd/README.txt svneol=native#text/plain
 debugger/windebug/fpwd/fpwd.lpr svneol=native#text/pascal
 debugger/windebug/fpwd/fpwdcommand.pas svneol=native#text/pascal
@@ -638,10 +639,15 @@ debugger/windebug/test/asmtest.lpr svneol=native#text/pascal
 debugger/windebug/test/asmtestunit.lfm svneol=native#text/plain
 debugger/windebug/test/asmtestunit.lrs svneol=native#text/plain
 debugger/windebug/test/asmtestunit.pas svneol=native#text/pascal
+debugger/windebug/winddwarf.pas svneol=native#text/pascal
+debugger/windebug/winddwarfconst.pas svneol=native#text/pascal
 debugger/windebug/windebugger.pp svneol=native#text/pascal
 debugger/windebug/windextra.pp svneol=native#text/pascal
 debugger/windebug/windisas.pp svneol=native#text/plain
+debugger/windebug/windloader.pp svneol=native#text/pascal
 debugger/windebug/windpetypes.pp svneol=native#text/pascal
+debugger/windebug/windsymbols.pas svneol=native#text/pascal
+debugger/windebug/windutil.pp svneol=native#text/pascal
 designer/abstractcompiler.pp svneol=native#text/pascal
 designer/abstracteditor.pp svneol=native#text/pascal
 designer/abstractfilesystem.pp svneol=native#text/pascal
