added docs footer for fcl
 SVN 9722@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -754,6 +754,7 @@ docs/RemoteDebugging.txt svneol=native#text/plain
 docs/TODO svneol=native#text/plain
 docs/html/README.txt svneol=native#text/plain
 docs/html/fpdoc.css svneol=native#text/css
+docs/html/localfclfooter.xml svneol=native#text/plain
 docs/html/locallclfooter.xml svneol=native#text/plain
 docs/html/localrtlfooter.xml svneol=native#text/plain
 docs/html/sourceforgefooter.xml svneol=native#text/xml
