--- a/.gitattributes
+++ b/.gitattributes
@@ -150,12 +150,12 @@ components/fpcunit/ide/README.txt svneol=native#text/plain
 components/fpcunit/ide/fpcunitide.lpk svneol=native#text/pascal
 components/fpcunit/ide/fpcunitide.pas svneol=native#text/pascal
 components/fpcunit/ide/fpcunitlazideintf.pas svneol=native#text/pascal
+components/fpcunit/ide/fpcunitproject1.inc svneol=native#text/plain
 components/fpcunit/ide/lib/README.txt svneol=native#text/plain
 components/fpcunit/ide/testcaseopts.lfm svneol=native#text/plain
 components/fpcunit/ide/testcaseopts.lrs svneol=native#text/pascal
 components/fpcunit/ide/testcaseopts.pas svneol=native#text/pascal
 components/fpcunit/lib/README.txt svneol=native#text/plain
-components/fpcunit/xmlreporter.pas svneol=native#text/plain
 components/h2pas/h2pasconfig.pas svneol=native#text/plain
 components/h2pas/h2pasconvert.pas svneol=native#text/plain
 components/h2pas/h2pasdlg.lfm svneol=native#text/plain
