--- a/.gitattributes
+++ b/.gitattributes
@@ -1303,6 +1303,9 @@ ide/lazdoc.pas svneol=native#text/plain
 ide/lazdocfrm.lfm svneol=native#text/plain
 ide/lazdocfrm.lrs svneol=native#text/plain
 ide/lazdocfrm.pas svneol=native#text/plain
+ide/lazdocselectinherited.lfm svneol=native#text/plain
+ide/lazdocselectinherited.lrs svneol=native#text/plain
+ide/lazdocselectinherited.pas svneol=native#text/plain
 ide/lrtpotools.pas svneol=native#text/pascal
 ide/macropromptdlg.pas svneol=native#text/pascal
 ide/main.pp svneol=native#text/pascal
