--- a/.gitattributes
+++ b/.gitattributes
@@ -1908,6 +1908,7 @@ images/vase_trans.xpm -text svneol=native#image/x-xpixmap
 install/lazarus.desktop svneol=native#text/plain
 languages/README.txt svneol=native#text/plain
 languages/installerstrconsts.nl.po svneol=native#text/plain
+languages/installerstrconsts.pl.po svneol=native#text/plain
 languages/installerstrconsts.po svneol=native#text/plain
 languages/lazaruside.ar.po svneol=native#text/plain
 languages/lazaruside.ca.po svneol=native#text/plain
