added example for TApplication.QueueAsyncCall
 SVN 9782@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -803,6 +803,7 @@ docs/xml/lcl/extgraphics.xml svneol=LF#text/xml eol=lf
 docs/xml/lcl/filectrl.xml svneol=LF#text/xml eol=lf
 docs/xml/lcl/fileutil.xml svneol=LF#text/xml eol=lf
 docs/xml/lcl/forms.xml svneol=LF#text/xml eol=lf
+docs/xml/lcl/forms/tapplication_queueasynccall.pas svneol=native#text/plain
 docs/xml/lcl/fpcadds.xml svneol=LF#text/xml eol=lf
 docs/xml/lcl/graphics.xml svneol=LF#text/xml eol=lf
 docs/xml/lcl/graphmath.xml svneol=LF#text/xml eol=lf
