--- a/.gitattributes
+++ b/.gitattributes
@@ -1299,6 +1299,8 @@ ide/lazarus_about_logo.lrs svneol=native#text/pascal
 ide/lazarus_dci.lrs svneol=native#text/pascal
 ide/lazarusidestrconsts.pas svneol=native#text/pascal
 ide/lazarusmanager.pas svneol=native#text/pascal
+ide/lazbuild.lpi svneol=native#text/plain
+ide/lazbuild.lpr svneol=native#text/plain
 ide/lazconf.pp svneol=native#text/pascal
 ide/lazdoc.pas svneol=native#text/plain
 ide/lazdocfrm.lfm svneol=native#text/plain
