IDE: started BuildManager, the IDE part controlling all building, compiling
 SVN 9811@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -1159,6 +1159,7 @@ ide/aboutfrm.pas svneol=native#text/pascal
 ide/addtoprojectdlg.lfm svneol=native#text/plain
 ide/addtoprojectdlg.lrs svneol=native#text/plain
 ide/addtoprojectdlg.pas svneol=native#text/pascal
+ide/basebuildmanager.pas svneol=native#text/plain
 ide/basedebugmanager.pas svneol=native#text/pascal
 ide/bigidemake.cfg svneol=native#text/plain
 ide/buildfiledlg.lfm svneol=native#text/plain
@@ -1167,6 +1168,7 @@ ide/buildfiledlg.pas svneol=native#text/pascal
 ide/buildlazdialog.lfm svneol=native#text/plain
 ide/buildlazdialog.lrs svneol=native#text/plain
 ide/buildlazdialog.pas svneol=native#text/pascal
+ide/buildmanager.pas svneol=native#text/plain
 ide/charactermapdlg.lfm svneol=native#text/plain
 ide/charactermapdlg.lrs svneol=native#text/pascal
 ide/charactermapdlg.pas svneol=native#text/pascal
