IDE: added windows version info for projects  from Jouke Rensma
 SVN 9836@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -1153,6 +1153,7 @@ examples/xmlstreaming/streamasxmldemo.lpi svneol=native#text/plain
 examples/xmlstreaming/streamasxmldemo.lpr svneol=native#text/plain
 ide/Makefile svneol=native#text/plain
 ide/Makefile.fpc svneol=native#text/plain
+ide/W32VersionInfo.pas svneol=native#text/plain
 ide/aboutfrm.lfm svneol=native#text/plain
 ide/aboutfrm.lrs svneol=native#text/pascal
 ide/aboutfrm.pas svneol=native#text/pascal
@@ -1392,6 +1393,9 @@ ide/uniteditor.pp svneol=native#text/pascal
 ide/unitinfodlg.lfm svneol=native#text/plain
 ide/unitinfodlg.lrs svneol=native#text/plain
 ide/unitinfodlg.pp svneol=native#text/pascal
+ide/versioninfoadditionalinfo.lfm svneol=native#text/plain
+ide/versioninfoadditionalinfo.lrs svneol=native#text/plain
+ide/versioninfoadditionalinfo.pas svneol=native#text/plain
 ide/viewunit_dlg.lfm svneol=native#text/plain
 ide/viewunit_dlg.lrs svneol=native#text/pascal
 ide/viewunit_dlg.pp svneol=native#text/pascal
