win32 version info: fixed mem leak and improved layout
 SVN 9845@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -1153,7 +1153,6 @@ examples/xmlstreaming/streamasxmldemo.lpi svneol=native#text/plain
 examples/xmlstreaming/streamasxmldemo.lpr svneol=native#text/plain
 ide/Makefile svneol=native#text/plain
 ide/Makefile.fpc svneol=native#text/plain
-ide/W32VersionInfo.pas svneol=native#text/plain
 ide/aboutfrm.lfm svneol=native#text/plain
 ide/aboutfrm.lrs svneol=native#text/pascal
 ide/aboutfrm.pas svneol=native#text/pascal
@@ -1399,6 +1398,7 @@ ide/versioninfoadditionalinfo.pas svneol=native#text/plain
 ide/viewunit_dlg.lfm svneol=native#text/plain
 ide/viewunit_dlg.lrs svneol=native#text/pascal
 ide/viewunit_dlg.pp svneol=native#text/pascal
+ide/w32versioninfo.pas svneol=native#text/plain
 ide/wordcompletion.pp svneol=native#text/pascal
 ideintf/README.txt svneol=native#text/plain
 ideintf/actionseditor.lfm svneol=native#text/plain
