--- a/.gitattributes
+++ b/.gitattributes
@@ -765,6 +765,7 @@ docs/html/update_lcl_html.sh -text svneol=native#mime-type%3Dtext/plain
 docs/images/cheetah1.png -text svneol=unset#image/png
 docs/images/laztitle.jpg -text svneol=unset#image/jpeg
 docs/index.html svneol=native#text/html
+docs/lazbuild.1 svneol=native#text/plain
 docs/xml/README.txt svneol=native#text/plain
 docs/xml/find_cvs_fpdoc_files.pl -text svneol=native#application/x-perl
 docs/xml/lcl/actnlist.xml svneol=LF#text/xml eol=lf
