--- a/.gitattributes
+++ b/.gitattributes
@@ -2613,6 +2613,13 @@ packager/ucomponentmanmain.pas svneol=native#text/pascal
 packager/ufrmaddcomponent.lfm svneol=native#text/plain
 packager/ufrmaddcomponent.lrs svneol=native#text/pascal
 packager/ufrmaddcomponent.pas svneol=native#text/pascal
+test/hello.ahk svneol=native#text/plain
+test/readme.txt svneol=native#text/plain
+test/runtests.lpi svneol=native#text/plain
+test/runtests.lpr svneol=native#text/plain
+test/runtestsgui.lpi svneol=native#text/plain
+test/runtestsgui.lpr svneol=native#text/plain
+test/testlpi.pas svneol=native#text/plain
 tools/apiwizz/apiwizard.lfm svneol=native#text/plain
 tools/apiwizz/apiwizard.lrs svneol=native#text/pascal
 tools/apiwizz/apiwizard.pp svneol=native#text/pascal
