fixed fpc-src rpm
 SVN 9856@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -2657,7 +2657,6 @@ tools/install/debian_fpc/copyright svneol=native#text/plain
 tools/install/debian_fpc/postinst svneol=native#text/plain
 tools/install/do_nothing.sh svneol=native#text/plain
 tools/install/file_filter.sh svneol=native#text/plain
-tools/install/fpc-src.spec svneol=native#text/plain
 tools/install/get_lazarus_version.sh svneol=native#text/plain
 tools/install/macosx/fpc-release.packproj.template svneol=native#text/plain
 tools/install/macosx/fpc.packproj.template svneol=native#text/plain
@@ -2671,6 +2670,7 @@ tools/install/macosx/makelazsnapshot.sh svneol=native#text/plain
 tools/install/replace_in_files.pl -text svneol=native#application/x-perl
 tools/install/rpm/create_gtk1_links.sh svneol=native#text/plain
 tools/install/rpm/create_nonroot_rpmmacros.sh svneol=native#text/plain
+tools/install/rpm/fpc-src.spec svneol=native#text/plain
 tools/install/rpm/fpc.spec.template svneol=native#text/plain
 tools/install/rpm/fpc_crosswin32.spec.template svneol=native#text/plain
 tools/install/rpm/get_rpm_source_dir.sh svneol=native#text/plain
