started deb for fpc_crosswin32
 SVN 9857@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -2646,8 +2646,15 @@ tools/install/create_lazarus_deb.sh svneol=native#text/plain
 tools/install/create_lazarus_export_tgz.sh svneol=native#text/plain
 tools/install/create_lazarus_rpm.sh svneol=native#text/plain
 tools/install/create_lazarus_snapshot_rpm.sh svneol=native#text/plain
+tools/install/cross_unix/HowToCreate_fpc_crosswin32_deb.txt svneol=native#text/plain
 tools/install/cross_unix/HowToCreate_fpc_crosswin32_rpm.txt svneol=native#text/plain
+tools/install/cross_unix/create_linux_cross_win32_deb.sh svneol=native#text/plain
 tools/install/cross_unix/create_linux_cross_win32_rpm.sh svneol=native#text/plain
+tools/install/cross_unix/debian_crosswin32/changelog svneol=native#text/plain
+tools/install/cross_unix/debian_crosswin32/changelog.Debian svneol=native#text/plain
+tools/install/cross_unix/debian_crosswin32/control svneol=native#text/plain
+tools/install/cross_unix/debian_crosswin32/copyright svneol=native#text/plain
+tools/install/cross_unix/debian_crosswin32/postinst svneol=native#text/plain
 tools/install/cross_unix/update_cross_fpc.sh svneol=native#text/plain
 tools/install/cvsexportlocal.pas svneol=native#text/pascal
 tools/install/debian_fpc/changelog svneol=native#text/plain
