--- a/.gitattributes
+++ b/.gitattributes
@@ -1374,9 +1374,9 @@ ide/sourcemarks.pas svneol=native#text/pascal
 ide/splash.lfm svneol=native#text/plain
 ide/splash.lrs svneol=native#text/pascal
 ide/splash.pp svneol=native#text/pascal
+ide/startlazarus.lpi svneol=native#text/plain
 ide/startlazarus.lpr svneol=native#text/pascal
 ide/startlazarus.rc svneol=native#text/plain
-ide/startlazopts.pas svneol=native#text/pascal
 ide/sysvaruseroverridedlg.lfm svneol=native#text/plain
 ide/sysvaruseroverridedlg.lrs svneol=native#text/plain
 ide/sysvaruseroverridedlg.pas svneol=native#text/pascal
