added scripts to create slackware package for lazarus
 SVN 9905@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -2647,6 +2647,7 @@ tools/install/create_fpc_tgz_from_local_dir.sh svneol=native#text/plain
 tools/install/create_lazarus_deb.sh svneol=native#text/plain
 tools/install/create_lazarus_export_tgz.sh svneol=native#text/plain
 tools/install/create_lazarus_rpm.sh svneol=native#text/plain
+tools/install/create_lazarus_slacktgz.sh svneol=native#text/plain
 tools/install/create_lazarus_snapshot_rpm.sh svneol=native#text/plain
 tools/install/cross_unix/HowToCreate_fpc_crosswin32_deb.txt svneol=native#text/plain
 tools/install/cross_unix/HowToCreate_fpc_crosswin32_rpm.txt svneol=native#text/plain
@@ -2684,6 +2685,8 @@ tools/install/rpm/fpc.spec.template svneol=native#text/plain
 tools/install/rpm/fpc_crosswin32.spec.template svneol=native#text/plain
 tools/install/rpm/get_rpm_source_dir.sh svneol=native#text/plain
 tools/install/rpm/lazarus.spec.template svneol=native#text/plain
+tools/install/slacktgz/build.sh svneol=native#text/plain
+tools/install/slacktgz/slack-desc svneol=native#text/plain
 tools/install/smart_strip.sh svneol=native#text/plain
 tools/install/win32/build-fpc.bat svneol=native#text/x-msdos-program
 tools/install/win32/build-lazarus.bat svneol=native#text/x-msdos-program
