win32 installer: added German localization from Swen
 SVN 9919@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -1933,6 +1933,7 @@ images/uparrow.xpm -text svneol=native#image/x-xpixmap
 images/vase_trans.xpm -text svneol=native#image/x-xpixmap
 install/lazarus.desktop svneol=native#text/plain
 languages/README.txt svneol=native#text/plain
+languages/installerstrconsts.de.po svneol=native#text/plain
 languages/installerstrconsts.nl.po svneol=native#text/plain
 languages/installerstrconsts.pl.po svneol=native#text/plain
 languages/installerstrconsts.po svneol=native#text/plain
