added example to add IDE help for the sources of a package
 SVN 9941@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -1008,6 +1008,15 @@ examples/groupboxnested.pas svneol=native#text/pascal
 examples/hello.lpi svneol=native#text/plain
 examples/hello.pp svneol=native#text/pascal
 examples/helloform.pp svneol=native#text/pascal
+examples/helpforpackage/README.txt svneol=native#text/plain
+examples/helpforpackage/demopackagewithhelp.lpk svneol=native#text/plain
+examples/helpforpackage/demopackagewithhelp.pas svneol=native#text/plain
+examples/helpforpackage/html/index.html svneol=native#text/plain
+examples/helpforpackage/html/pkghelpdemounit1/index-5.html svneol=native#text/plain
+examples/helpforpackage/html/pkghelpdemounit1/index.html svneol=native#text/plain
+examples/helpforpackage/html/pkghelpdemounit1/register.html svneol=native#text/plain
+examples/helpforpackage/pkghelpdemounit1.pas svneol=native#text/plain
+examples/helpforpackage/xml/pkghelpdemounit1.xml svneol=native#text/plain
 examples/helphtml/html/edit1.html svneol=native#text/plain
 examples/helphtml/html/edit2.html svneol=native#text/plain
 examples/helphtml/html/index.html svneol=native#text/plain
@@ -2594,6 +2603,7 @@ packager/addtopackagedlg.pas svneol=native#text/pascal
 packager/basepkgmanager.pas svneol=native#text/pascal
 packager/brokendependenciesdlg.pas svneol=native#text/pascal
 packager/globallinks/README.txt svneol=native#text/plain
+packager/globallinks/demopackagewithhelp-0.lpl svneol=native#text/plain
 packager/globallinks/h2paswizard-0.lpl svneol=native#text/plain
 packager/globallinks/lazcustomform-0.lpl svneol=native#text/plain
 packager/globallinks/lazopenglcontext-0.lpl svneol=native#text/plain
