--- a/.gitattributes
+++ b/.gitattributes
@@ -1946,6 +1946,7 @@ languages/installerstrconsts.de.po svneol=native#text/plain
 languages/installerstrconsts.nl.po svneol=native#text/plain
 languages/installerstrconsts.pl.po svneol=native#text/plain
 languages/installerstrconsts.po svneol=native#text/plain
+languages/lazaruside.af-za.po svneol=native#text/plain
 languages/lazaruside.ar.po svneol=native#text/plain
 languages/lazaruside.ca.po svneol=native#text/plain
 languages/lazaruside.de.po svneol=native#text/plain
