renamed .po files for xx_YY naming convention, common for po/mo files
 SVN 9996@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -1946,7 +1946,7 @@ languages/installerstrconsts.de.po svneol=native#text/plain
 languages/installerstrconsts.nl.po svneol=native#text/plain
 languages/installerstrconsts.pl.po svneol=native#text/plain
 languages/installerstrconsts.po svneol=native#text/plain
-languages/lazaruside.af-za.po svneol=native#text/plain
+languages/lazaruside.af_ZA.po svneol=native#text/plain
 languages/lazaruside.ar.po svneol=native#text/plain
 languages/lazaruside.ca.po svneol=native#text/plain
 languages/lazaruside.de.po svneol=native#text/plain
@@ -1965,7 +1965,7 @@ languages/lazaruside.plwin.po svneol=native#text/plain
 languages/lazaruside.po svneol=native#text/plain
 languages/lazaruside.ru.po svneol=native#text/plain
 languages/lazaruside.ua.po svneol=native#text/plain
-languages/lazaruside.zh-cn.po svneol=native#text/plain
+languages/lazaruside.zh_CN.po svneol=native#text/plain
 languages/objinspstrconsts.ca.po svneol=native#text/plain
 languages/objinspstrconsts.de.po svneol=native#text/plain
 languages/objinspstrconsts.es.po svneol=native#text/plain
@@ -1982,7 +1982,7 @@ languages/objinspstrconsts.plwin.po svneol=native#text/plain
 languages/objinspstrconsts.po svneol=native#text/plain
 languages/objinspstrconsts.ru.po svneol=native#text/plain
 languages/objinspstrconsts.ua.po svneol=native#text/plain
-languages/objinspstrconsts.zh-cn.po svneol=native#text/plain
+languages/objinspstrconsts.zh_CN.po svneol=native#text/plain
 lcl/LAYOUT.txt svneol=native#text/plain
 lcl/actnlist.pas svneol=native#text/pascal
 lcl/alllclunits.pp svneol=native#text/pascal
