added icons for TSimpleIPCClient/Server
 SVN 10001@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -1771,6 +1771,8 @@ images/components/tscrollbox.xpm -text svneol=native#image/x-xpixmap
 images/components/tselectdirdialog.xpm svneol=native#text/plain
 images/components/tselectdirectorydialog.xpm -text svneol=native#image/x-xpixmap
 images/components/tshape.xpm -text svneol=native#image/x-xpixmap
+images/components/tsimpleipcclient.xpm svneol=native#text/plain
+images/components/tsimpleipcserver.xpm svneol=native#text/plain
 images/components/tspeedbutton.ico -text svneol=unset#image/x-icon
 images/components/tspeedbutton.xpm -text svneol=native#image/x-xpixmap
 images/components/tspinedit.ico -text svneol=unset#image/x-icon
